# cmfatlas

./: .dockerignore  .gitignore  .railwayignore  CMF_ATLAS_V23_ROADMAP.md  Dockerfile  PROGRESS_GAP_FILLING.md  README.md  add_pfq_cmfs.py  annotation_db.py  annotation_routes.py  api.py  archive_and_clean.py  backfill_irrational.py  backfill_matrices.py  backfill_step_matrices.py  clean_and_upgrade_db.py  cmf_deep_identify.py  cmf_deep_identify_v2.py  cmf_dense_scan.jsonl  cmf_dense_scan.py  cmf_distiller.py  cmf_euler_full.jsonl  cmf_euler_results.jsonl  cmf_euler_scan.py  cmf_path2_pcf.py  cmf_path2_results.jsonl  cmf_path3_pslq.py  cmf_path3_results.jsonl  cmf_push_identifications.py  cmf_richardson_results.jsonl  cmf_richardson_scan.py  cmf_walk_scan.py  deploy.sh  docker-entrypoint.sh  dreams_3d.py  dreams_3d_query.py  dreams_3d_results.jsonl  dreams_3d_summary.json  export_v2_candidates.py  identification_summary.jsonl  (+27 more)
data/: algorithm_overview.md  annotation.db  atlas_2d.db  atlas_2d.db.bak  atlas_2d.db.bak2  atlas_2d.db.pre_euler2ai  atlas_2d.db.pre_matrix_clean  distiller_paper_data.json  distiller_stage1.jsonl  distiller_stage2.json  distiller_theorems.tex  irrational_candidates.json  irrational_candidates_v2.json  research_paper_draft.md  verification_list.csv
euler2ai_archive/: euler2ai_cmfs.json  no_matrix_cmfs.json
frontend/: about.html  annotate_login.html  annotate_protocol.html  annotate_review.html  browse.html  conservative-test.html  constants.html  entry.html  explorer.html  guide.html  index.html  sources.html
frontend_cpanel/: annotate_cmf.html  (+4 more)
(+152 files in other folders)
