[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmf-atlas"
version = "0.1.0"
description = "Series-First CMF Discovery via Density Mapping and Gap Targeting"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "sympy>=1.12",
    "mpmath>=1.3",
    "scikit-learn>=1.4",
    "plotly>=5.18",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
